@@ -29,6 +29,8 @@
 #ifndef ICALGAUGE_H
 #define ICALGAUGE_H
 
+#include <libical/icalcomponent.h>
+
 /** @file icalgauge.h
  *  @brief Routines implementing a filter for ical components
  */
