@@ -6,7 +6,6 @@ typedef union {
 	char* v_string;
 } yystype;
 # define YYSTYPE yystype
-# define YYSTYPE_IS_TRIVIAL 1
 #endif
 # define	STRING	257
 # define	SELECT	258
