@@ -1,3 +1,9 @@
+2003-10-15  Rodrigo Moya <rodrigo@ximian.com>
+
+	* src/libicalss/icalgauge.h: added missing header.
+
+	* src/libicalss/icalssyacc.y: removed ical.h header.
+
 2003-10-09  Jeffrey Stedfast  <fejj@ximian.com>
 
 	* src/libical/Makefile.am: Fixed INCLUDES and don't autogenerate
